# galileo-interview

./: .gitignore  README.md  cdk.json  docker-compose.yaml  manifest.json
infrastructure/: README.md  main.py  pyproject.toml
infrastructure/stacks/: slack_agent_stack.py  slack_bot_stack.py
scripts/: build-and-deploy.sh  deploy.py  setup-aws-account.sh
slack_agent/: Dockerfile  README.md  config.py  langgraph.json  main.py  pyproject.toml
slack_agent/agent/: graph.py  state.py  tools.py  types.py
slack_agent/utils/: secrets_manager.py
slack_app/: Dockerfile  Dockerfile.local  README.md  app.py  main.py  pyproject.toml  requirements.txt
slack_app/listeners/: __init__.py
slack_app/listeners/assistant/: __init__.py  assistant.py
slack_app/listeners/events/: __init__.py  file_shared.py  new_message.py  s3_client.py
slack_app/utils/: llm_caller.py  secrets_manager.py
