[project]
name = "slack-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.7",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "langchain-openai>=0.3.29",
    "langgraph>=0.6.4",
    "langgraph-api>=0.2.129",
    "langgraph-cli[inmem]>=0.3.6",
]
