[project]
name = "slack-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "anthropic>=0.62.0",
    "boto3>=1.40.7",
    "dotenv>=0.9.9",
    "langgraph-sdk>=0.2.0",
    "requests>=2.32.4",
    "slack-bolt>=1.23.0",
    "slack-sdk>=3.36.0",
]
